# influencer-manager

./: .env.example  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BASELINE.md  CONFIG.md  REQUIREMENTS.md
docs/adr/: 0001-architecture-style.md  0002-storage-public-url.md
src/influencer_manager/: __init__.py  __main__.py
src/influencer_manager/app/: usecases.py
src/influencer_manager/config/: __init__.py  settings.py
src/influencer_manager/domain/: models.py
src/influencer_manager/infra/: asset_store_adapter.py  gemini_adapter.py  instagram_adapter.py
src/influencer_manager/interfaces/: cli.py
tests/: test_settings.py  test_smoke.py
